# ChangeLog for dev-libs/libtasn1
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.84 2009/04/19 22:10:58 arfrever Exp $

*libtasn1-2.1 (19 Apr 2009)

  19 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -libtasn1-1.7.ebuild, -libtasn1-2.0.ebuild, +libtasn1-2.1.ebuild:
  Version bump.

*libtasn1-2.0 (13 Apr 2009)

  13 Apr 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -files/libtasn1-0.3.5-respectcflags.patch, -libtasn1-0.3.5.ebuild,
  +libtasn1-2.0.ebuild:
  Version bump. Remove an older version.

  24 Mar 2009; Joseph Jezak <josejx@gentoo.org> libtasn1-1.8.ebuild:
  Marked ppc stable for bug #218747.

  23 Mar 2009; Jeroen Roovers <jer@gentoo.org> libtasn1-1.8.ebuild:
  Stable for HPPA (bug #218747).

  23 Mar 2009; Brent Baude <ranger@gentoo.org> libtasn1-1.8.ebuild:
  stable ppc64, bug 218747

  23 Mar 2009; Raúl Porcel <armin76@gentoo.org> libtasn1-1.8.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #218747

  22 Mar 2009; Markus Meier <maekke@gentoo.org> libtasn1-1.8.ebuild:
  amd64/x86 stable, bug #218747

  22 Mar 2009; Tobias Klausmann <klausman@gentoo.org> libtasn1-1.8.ebuild:
  Stable on alpha, bug #218747

*libtasn1-1.8 (20 Jan 2009)

  20 Jan 2009; Daniel Black <dragonheart@gentoo.org> -libtasn1-1.2.ebuild,
  -libtasn1-1.4.ebuild, -libtasn1-1.5.ebuild, +libtasn1-1.8.ebuild:
  version bump as per bug #255307 added thanks Arfrever. cleanout also done

*libtasn1-1.7 (26 Dec 2008)

  26 Dec 2008; Daniel Black <dragonheart@gentoo.org> libtasn1-0.3.5.ebuild,
  libtasn1-1.2.ebuild, libtasn1-1.3.ebuild, libtasn1-1.4.ebuild,
  +libtasn1-1.7.ebuild:
  version bump and SRC_URI fix on older versions

  13 Nov 2008; Daniel Black <dragonheart@gentoo.org> -libtasn1-1.6.ebuild:
  removed - no longer has libtasn1-config that gnutls (and probably others) need

*libtasn1-1.6 (13 Nov 2008)
