@@ -1,8 +1,10 @@
 DIST libtasn1-1.3.tar.gz 1527071 RMD160 f18d60ae696333addb185c0b39728da701723505 SHA1 154d79b6e49ec9efeb758ef964c6d23a838da289 SHA256 36b4b1ce22f74bf3cac88c59f17242bef44ecda55cc7922c48193fba13f2c8e9
 DIST libtasn1-1.8.tar.gz 1608176 RMD160 4e95d22300d8cec61ba496b3e4a198b669b224bc SHA1 12b8a872eb4aa24f12bd09a24ab6199b8058e5b3 SHA256 2c81cd1d5488e6efdc67b1e8a381e70a33dc75d9c439f23220ba730bc405ee07
 DIST libtasn1-2.1.tar.gz 1601535 RMD160 670a02f592dcd9f943e9d2ed21fcdb5acab15764 SHA1 884cc6609d7694a834a767b4b2975d6c5ab0d566 SHA256 ef89d6ef509185f6f3b67140d58e5aa4494fa87118e0982dc2fddeb0d0204533
+DIST libtasn1-2.2.tar.gz 1641693 RMD160 5d89120b85d10dad543738a5383b133857d2d600 SHA1 d6e0d449cf2da04c93f498d2cf4415f572611b46 SHA256 5dd7956d62a351bb657f18d228c5d5b9e9455355543f59ff36484a9d389e36b9
 EBUILD libtasn1-1.3.ebuild 765 RMD160 39b0b3304ca4d63db4755824e8705970db74717e SHA1 f6cda6f66efc2ccb45b5b1fc8c7ccff275dfcafd SHA256 36d9e4d7593162a533bfa4e82a732340d64a890d281cbb3bd9994d9b7db23ffa
 EBUILD libtasn1-1.8.ebuild 1005 RMD160 33fe09928dbb06187204746ee2e8476bf4ef8e94 SHA1 c30e7cabfcaca252daa5acd79992e993026afbbe SHA256 f86e6dea49ff80d1fc5d821af9b744ec87b8c6c8f492a60eb453d4385b566256
 EBUILD libtasn1-2.1.ebuild 1015 RMD160 ff526728a94539fe1d893be97d41d6eb9d1652ee SHA1 6114915b2223410ebdb61e7bc7d40381f16343ec SHA256 0ad2eb2ef3ac6086b660098daa6c0e0e1beac937bf792518241647b0329e3cba
-MISC ChangeLog 10651 RMD160 25dcb9fc9752554d2e1508575c9c537bbaafb78c SHA1 916180bac2ddabc25d6ad28c7d2528a98528b1b0 SHA256 e497118424452b9038957f2a750652432b551db60973e81fdcfe5c187cf125b3
+EBUILD libtasn1-2.2.ebuild 1015 RMD160 71d0075c2a760fc62e4e8716f2eae2e0d9affa02 SHA1 da9ff3b66af4b813366a6485c72296c18b1298ed SHA256 8f584344fa9fbf518c678c1f31a22b65a8bf493d1226bdb224a6935f6a926c36
+MISC ChangeLog 10794 RMD160 12e7bde62cd05b006ac318331bf8b9393b41e5a7 SHA1 86199a35fb46165c9dc5ca5e248329254ef1f73f SHA256 c91fabb7818077eee99a793dfab3f479996e22aebf47aa44683aa5d52ecf7e53
 MISC metadata.xml 160 RMD160 61ea9f9370afee3db802f40f7c6b2edd2f5347cf SHA1 51cf29a3589cff823294704e225b0de18f65e6dd SHA256 7419f4e73ddd07284403525f1380824fc68280cad69e2dfae0645ad52b33ef10
