@@ -1,0 +1,31 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/libtasn1-2.2.ebuild,v 1.1 2009/05/20 15:40:18 arfrever Exp $
+
+DESCRIPTION="provides ASN.1 structures parsing capabilities for use with GNUTLS"
+HOMEPAGE="http://www.gnutls.org/"
+SRC_URI="mirror://gnu/gnutls/${P}.tar.gz"
+
+LICENSE="GPL-3 LGPL-2.1"
+SLOT="0"
+KEYWORDS="~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris"
+IUSE="doc"
+
+DEPEND=">=dev-lang/perl-5.6
+	sys-devel/bison"
+RDEPEND=""
+
+src_compile() {
+	econf || die
+	# Darwin's ar doesn't like creating empty archives, so just skip doing so
+	# https://savannah.gnu.org/support/?106611
+	[[ ${CHOST} == *-darwin* ]] \
+		&& sed -i -e '/^SUBDIRS = gllib/d' lib/Makefile
+	emake || die
+}
+
+src_install() {
+	emake DESTDIR="${D}" install || die "emake install failed"
+	dodoc AUTHORS ChangeLog NEWS README THANKS
+	use doc && dodoc doc/libtasn1.ps
+}
