@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libtasn1
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.84 2009/04/19 22:10:58 arfrever Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libtasn1/ChangeLog,v 1.85 2009/05/20 15:40:18 arfrever Exp $
+
+*libtasn1-2.2 (20 May 2009)
+
+  20 May 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +libtasn1-2.2.ebuild:
+  Version bump.
 
 *libtasn1-2.1 (19 Apr 2009)
 
